<resources>
    <string name="app_name">Rick Almanac</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <!-- TODO: Remove o change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="error_string">Error</string>
    <string name="lorem">Lorem Ipsum</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="origin">Origin</string>
    <string name="retry_string">Retry</string>

    <string name="no_search_result">No character found for this query</string>
    <string name="no_search_data">Enter character name to search</string>
    <string name="nothing_here">There is nothing here</string>

    <string name="img_no_query_content_description">No Query Image</string>
    <string name="img_no_result_content_description">No Result Image</string>
</resources>