<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kadabengaran.rickalmanac.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_favorite"
            app:destination="@id/navigation_favorite"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.kadabengaran.rickalmanac.presentation.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_navigation_favorite"
            app:destination="@id/navigation_favorite"/>
    </fragment>

    <fragment
        app:moduleName="rickalmanac.favorite"
        android:id="@+id/navigation_favorite"
        android:name="com.kadabengaran.rickalmanac.favorite.presentation.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>