<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backColor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:paddingTop="16dp"
    tools:context=".presentation.detail.DetailCharacterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        app:cardBackgroundColor="?attr/colorPrimaryVariant2"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_detail_status"
                style="@style/Theme.RickAlmanac.Paragraph_2"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/status"
                android:textColor="?attr/textColorSecondary"
                app:drawableStartCompat="@drawable/ic_info"
                app:drawableTint="?attr/textColorSecondary"
                android:drawablePadding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_status_value"
                style="@style/Theme.RickAlmanac.Paragraph_2"
                android:layout_marginEnd="16dp"
                tools:text="@string/lorem"
                android:textColor="?attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/tv_detail_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_detail_status" />

            <View
                android:id="@+id/view_divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?attr/backColor"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_status" />

            <TextView
                android:id="@+id/tv_detail_species"
                style="@style/Theme.RickAlmanac.Paragraph_2"
                android:layout_marginTop="8dp"
                android:text="@string/species"
                android:textColor="?attr/textColorSecondary"
                app:drawableStartCompat="@drawable/ic_human"
                app:drawableTint="?attr/textColorSecondary"
                android:drawablePadding="10dp"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_status"
                app:layout_constraintTop_toBottomOf="@id/view_divider_1" />

            <TextView
                android:id="@+id/tv_detail_species_value"
                style="@style/Theme.RickAlmanac.Paragraph_2"
                tools:text="@string/lorem"
                android:layout_marginEnd="16dp"
                android:textColor="?attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/tv_detail_species"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_detail_species" />

            <View
                android:id="@+id/view_divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?attr/backColor"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_species" />

            <TextView
                android:id="@+id/tv_detail_gender"
                style="@style/Theme.RickAlmanac.Paragraph_2"
                android:layout_marginTop="8dp"
                android:text="@string/gender"
                android:textColor="?attr/textColorSecondary"
                app:drawableStartCompat="@drawable/ic_gender"
                app:drawableTint="?attr/textColorSecondary"
                android:drawablePadding="10dp"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_species"
                app:layout_constraintTop_toBottomOf="@id/view_divider_2" />

            <TextView
                android:id="@+id/tv_detail_gender_value"
                style="@style/Theme.RickAlmanac.Paragraph_2"
                tools:text="@string/lorem"
                android:layout_marginEnd="16dp"
                android:textColor="?attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/tv_detail_gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_detail_gender" />
            <View
                android:id="@+id/view_divider_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?attr/backColor"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_gender" />

            <TextView
                android:id="@+id/tv_detail_location"
                style="@style/Theme.RickAlmanac.Paragraph_2"
                android:layout_marginTop="8dp"
                android:text="@string/location"
                android:textColor="?attr/textColorSecondary"
                app:drawableStartCompat="@drawable/ic_current_location"
                app:drawableTint="?attr/textColorSecondary"
                android:drawablePadding="10dp"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_gender"
                app:layout_constraintTop_toBottomOf="@id/view_divider_3" />

            <TextView
                android:id="@+id/tv_detail_location_value"
                style="@style/Theme.RickAlmanac.Paragraph_2"
                android:layout_marginEnd="16dp"
                tools:text="@string/lorem"
                android:textColor="?attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/tv_detail_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_detail_location" />

            <View
                android:id="@+id/view_divider_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?attr/backColor"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_location" />

            <TextView
                android:id="@+id/tv_detail_origin"
                style="@style/Theme.RickAlmanac.Paragraph_2"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/origin"
                android:textColor="?attr/textColorSecondary"
                app:drawableStartCompat="@drawable/ic_pin_location"
                app:drawableTint="?attr/textColorSecondary"
                android:drawablePadding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_location"
                app:layout_constraintTop_toBottomOf="@id/view_divider_4" />

            <TextView
                android:id="@+id/tv_detail_origin_value"
                style="@style/Theme.RickAlmanac.Paragraph_2"
                android:layout_marginEnd="16dp"
                tools:text="@string/lorem"
                android:textColor="?attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/tv_detail_origin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_detail_origin"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>